--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   "dependencies": {
     "@jupyterlab/application": "^3.0.4",
     "@jupyterlab/apputils": "^3.0.3",
+    "@lumino/messaging": "^1.4.3",
     "@lumino/widgets": "^1.18.0"
   },
   "devDependencies": {
